feat: add integration tests, advanced examples, and critical fixes
Integration Tests
- Add comprehensive test suite for all 5 transports (NATS, Redis, RabbitMQ, WebSocket, Webhook)
- Each transport has 3-6 tests covering pub/sub, routing, error handling, and transport-specific features
- Tests marked with #[ignore] flag requiring explicit execution
- Tests require running services via docker-compose

Advanced Examples
- multi_transport.rs: orchestrate 4 transports in complete order workflow
- error_handling_dlq.rs: demonstrate DLQ usage, retry strategies, error types
- circuit_breaker.rs: show state transitions, failure detection, recovery
- backpressure.rs: compare all 3 backpressure strategies with live metrics

Critical Fixes
- Implement DropOldest backpressure strategy (was falling back to Block)
  - Add VecDeque-based manual queue with proper FIFO semantics
  - Drop oldest events when queue reaches capacity
  - Track dropped events in statistics
- Fix unused event_type parameter in Event::with_metadata()
- Fix unused error field in DLQ entries (now logged for debugging)
- Remove all unused imports flagged by clippy
- Document intentionally stored fields

Documentation
- Add tests/README.md with integration testing guide and setup instructions
- Add examples/README.md with comprehensive examples guide and troubleshooting
- Add ARCHITECTURE_ISSUES.md with detailed analysis and improvement roadmap
- Add "Planned Features" section to main README.md
- Update CHANGELOG.md with all changes

Development Infrastructure
- Update Makefile with integration test commands for individual transports
- Update Makefile with commands for running advanced examples
- Add docker-compose.yml for test services
- Add comprehensive documentation in docs/ directory

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ categories = ["web-programming", "network-programming"]
 resolver = "3"
 members = [
     "core",
+    "watchtower-derive",
     "transport/webhook",
     "transport/nats",
     "transport/redis",
@@ -22,6 +23,7 @@ members = [
 
 [dependencies]
 watchtower-core = { path = "./core" }
+watchtower-derive = { path = "./watchtower-derive" }
 watchtower-webhook = { path = "./transport/webhook" }
 watchtower-nats = { path = "./transport/nats" }
 watchtower-redis = { path = "./transport/redis" }
@@ -29,3 +31,9 @@ watchtower-rabbitmq = { path = "./transport/rabbitmq" }
 watchtower-websocket = { path = "./transport/websocket" }
 watchtower-unified = { path = "./unified" }
 watchtower-config = { path = "./config" }
+
+[dev-dependencies]
+tokio = { version = "1.35", features = ["full"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+chrono = "0.4"
