--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
     "transport/redis",
     "transport/rabbitmq",
     "transport/websocket",
+    "transport/websocket-server",
     "unified",
     "config"
 ]
@@ -29,6 +30,7 @@ watchtower-nats = { path = "./transport/nats" }
 watchtower-redis = { path = "./transport/redis" }
 watchtower-rabbitmq = { path = "./transport/rabbitmq" }
 watchtower-websocket = { path = "./transport/websocket" }
+watchtower-websocket-server = { path = "./transport/websocket-server" }
 watchtower-unified = { path = "./unified" }
 watchtower-config = { path = "./config" }
 
