feat: add conditional debug logging feature
Implement debug-logging feature flag to enable/disable debug and trace
logs at compile time, improving production performance.

Changes:
- Add debug-logging feature flag to all workspace crates
- Create debug_log! and trace_log! macros with conditional compilation
- Replace debug! calls with debug_log! in core and transport modules
- Add comprehensive documentation in DEBUG_LOGGING.md

Benefits:
- Zero runtime cost when disabled (default)
- Complete removal of debug code from production binaries
- Flexible per-crate debugging during development
- Maintains all info/warn/error logging unconditionally

Usage:
  Production: cargo build --release
  Development: cargo build --features debug-logging
  Runtime control: RUST_LOG=debug cargo run --features debug-logging

--- a/transport/rabbitmq/Cargo.toml
+++ b/transport/rabbitmq/Cargo.toml
@@ -3,6 +3,10 @@ name = "watchtower-rabbitmq"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+debug-logging = []
+
 [dependencies]
 watchtower-core = { path = "../../core" }
 lapin = "2.3"
