--- a/transport/websocket/Cargo.toml
+++ b/transport/websocket/Cargo.toml
@@ -3,6 +3,10 @@ name = "watchtower-websocket"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+debug-logging = []
+
 [dependencies]
 watchtower-core = { path = "../../core" }
 tokio = { version = "1", features = ["full"] }
