--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -3,6 +3,10 @@ name = "watchtower-core"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+debug-logging = []
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
