--- a/transport/webhook/Cargo.toml
+++ b/transport/webhook/Cargo.toml
@@ -3,6 +3,10 @@ name = "watchtower-webhook"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = []
+debug-logging = []
+
 [dependencies]
 watchtower-core = { path = "../../core" }
 watchtower-config = { path = "../../config" }
