--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,19 @@ members = [
     "config"
 ]
 
+[features]
+default = []
+debug-logging = [
+    "watchtower-core/debug-logging",
+    "watchtower-webhook/debug-logging",
+    "watchtower-nats/debug-logging",
+    "watchtower-redis/debug-logging",
+    "watchtower-rabbitmq/debug-logging",
+    "watchtower-websocket/debug-logging",
+    "watchtower-websocket-server/debug-logging",
+    "watchtower-unified/debug-logging",
+]
+
 [dependencies]
 watchtower-core = { path = "./core" }
 watchtower-derive = { path = "./watchtower-derive" }
